note add ,delete ,edit all functions are linked with the front end

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="bootstrap stylesheet" href="./Bootstrap/style.css" />
     <link rel="myStylesheet" href="./mystyle.css" />
     <title>Notes-app</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"  />
   </head>
 
   <body>
@@ -21,7 +22,7 @@
     <div id="root"></div>
 
 
-
+    <script src="https://kit.fontawesome.com/c5270c2166.js" crossorigin="anonymous"></script>
     <script src="./Bootstrap/script.js"></script>
   </body>
 </html>
